# CoupledModelDriver

./: .editorconfig  .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  quick_test.yml  tests.yml
client/: generate_adcirc.py  generate_configuration.py  initialize_adcirc.py
coupledmodeldriver/: __init__.py  __main__.py  _depend.py  adcirc.py  configuration.py  configurations.py  job_script.py  job_scripts.py  platforms.py  script.py  utilities.py
coupledmodeldriver/adcirc/: __init__.py  adcirc.py  configurations.py  job_scripts.py  nems_adcirc.py
coupledmodeldriver/client/: __init__.py  check_completion.py  generate_adcirc.py  generate_schism.py  initialize_adcirc.py  initialize_from_configuration.py  initialize_schism.py  missing_jobs.py  unqueued_runs.py  unstarted_jobs.py
coupledmodeldriver/configurations/: __init__.py  base.py  forcings.py  models.py  run.py
coupledmodeldriver/configurations/adcirc/: __init__.py  generate.py  job_scripts.py  run.py
coupledmodeldriver/configurations/nems/: __init__.py  base.py  generate.py  job_scripts.py  run.py
coupledmodeldriver/configure/: __init__.py  base.py  configure.py  models.py  run.py
coupledmodeldriver/configure/forcings/: __init__.py  base.py
coupledmodeldriver/generate/: __init__.py  base.py
coupledmodeldriver/generate/adcirc/: __init__.py  base.py  check.py  configure.py  generate.py  script.py
coupledmodeldriver/generate/nems/: __init__.py  base.py  configure.py  generate.py  script.py
coupledmodeldriver/generate/schism/: __init__.py  base.py  check.py  configure.py  generate.py  script.py
coupledmodeldriver/nems/: __init__.py  configurations.py  job_scripts.py  nems_adcirc.py
docs/: requirements.txt
docs/source/: client.rst  conf.py  coupledmodeldriver.client.rst  coupledmodeldriver.configure.forcings.rst  coupledmodeldriver.configure.rst  coupledmodeldriver.generate.adcirc.rst  coupledmodeldriver.generate.rst  coupledmodeldriver.rst  index.rst  json_configurations.rst  run_configurations.rst  utilities.rst
examples/: barebones.py  perturb_mannings_n.py
examples/adcirc_only/: hera_hsofs120m_sandy_spinup.py  hera_hsofs120m_sandy_spinup_tidal.py  hera_hsofs120m_sandy_spinup_tidal_atmesh_ww3data.py  hera_hsofs250m_sandy_spinup.py  hera_hsofs250m_sandy_spinup_tidal.py  hera_hsofs250m_sandy_spinup_tidal_atmesh_ww3data.py  hera_shinnecock_ike_spinup.py
examples/hera/: hera_hsofs_irma.py  hera_hsofs_sandy.py  hera_shinnecock_ike.py  hera_shinnecock_ike_adcirc.py  hera_shinnecock_ike_perturbed_mannings_n.py  single_run_hsofs_irma_hera.py  single_run_hsofs_sandy_hera.py  single_run_shinnecock_ike_hera.py
examples/local/: local_hsofs_irma.py  local_hsofs_sandy.py  local_shinnecock_ike.py  local_shinnecock_ike_adcirc.py  local_shinnecock_ike_perturbed_mannings_n.py  single_run_shinnecock_ike_wsl.py
examples/nems_adcirc/: hera_hsofs120m_sandy_spinup_tidal_atmesh_ww3data.py  hera_hsofs250m_sandy_spinup_tidal_atmesh_ww3data.py  hera_shinnecock_ike_spinup_tidal_atmesh_ww3data.py  hera_shinnecock_ike_spinup_tidal_atmesh_ww3data_perturbed_mannings_n.py
examples/stampede2/: single_run_hsofs_sandy_stampede2.py  single_run_shinnecock_ike_stampede2.py  stampede2_hsofs_sandy.py  stampede2_shinnecock_ike.py  stampede2_shinnecock_ike_perturbed_mannings_n.py
tests/: __init__.py  test_base.py  test_client.py  test_configuration.py  test_configurations.py  test_generation.py  test_utilities.py
tests/data/reference/: symlink_test.txt
tests/data/reference/hera_shinnecock_ike/: config.rc.coldstart  config.rc.hotstart  configure_adcirc.json  configure_atmesh.json  configure_coupledmodeldriver.json  configure_nems.json  configure_slurm.json  configure_ww3data.json  hera_adcprep.job  hera_nems_adcirc.job.coldstart  hera_nems_adcirc.job.hotstart  job_adcprep_hera.job  job_nems_adcirc_hera.job.coldstart  job_nems_adcirc_hera.job.hotstart  model_configure.coldstart  model_configure.hotstart  nems.configure.coldstart  nems.configure.hotstart  run.sh  run_hera.sh  run_local.sh  setup.sh.coldstart  setup.sh.hotstart  setup_hera.sh  setup_hotstart.sh
tests/data/reference/local_shinnecock_ike/: config.rc.coldstart  config.rc.hotstart  configure_adcirc.json  configure_atmesh.json  configure_coupledmodeldriver.json  configure_nems.json  configure_slurm.json  configure_tidal_forcing.json  configure_ww3data.json  job_adcirc_local.job.hotstart  job_adcprep_local.job  job_nems_adcirc_local.job.coldstart  job_nems_adcirc_local.job.hotstart  local_adcprep.job  local_nems_adcirc.job.coldstart  local_nems_adcirc.job.hotstart  model_configure.coldstart  model_configure.hotstart  nems.configure.coldstart  nems.configure.hotstart  run.sh  run_local.sh  setup.sh.coldstart  setup.sh.hotstart  setup_coldstart.sh  setup_hotstart.sh  setup_local.sh
tests/data/reference/stampede2_shinnecock_ike/: config.rc.coldstart  config.rc.hotstart  configure_adcirc.json  configure_atmesh.json  configure_coupledmodeldriver.json  configure_nems.json  configure_slurm.json  configure_tidal_forcing.json  configure_ww3data.json  job_adcprep_stampede2.job  job_nems_adcirc_stampede2.job.coldstart  job_nems_adcirc_stampede2.job.hotstart  model_configure.coldstart  model_configure.hotstart  nems.configure.coldstart  nems.configure.hotstart  run.sh  run_stampede2.sh  setup.sh.coldstart  setup.sh.hotstart  setup_coldstart.sh  setup_stampede2.sh  stampede2_adcprep.job  stampede2_nems_adcirc.job.coldstart  stampede2_nems_adcirc.job.hotstart
(+503 files in other folders)
