[metadata]
name = coupledmodeldriver
author = Zach Burnett
author_email = zachary.burnett@noaa.gov
description = coupled model configuration generation
long_description = file: README.md
license = CC0
url = https://github.com/noaa-ocs-modeling/CoupledModelDriver.git

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
