[metadata]
name = coupledmodeldriver
author = Zach Burnett <zachary.r.burnett@gmail.com>
description = coupled model configuration generation
long_description = file:README.md
long_description_content_type = text/markdown
license = CC0
python_requires = >=3.7
url = https://github.com/noaa-ocs-modeling/CoupledModelDriver.git

[options]
install_requires =
    adcircpy >= 1.1.2
    file-read-backwards
    nemspy >= 1.0.4
    numpy
    pyproj
    typepigeon >= 1.0.3

[options.extras_require]
testing =
    pooch
    pytest
    pytest-cov
    pytest-socket
    pytest-xdist
    wget
development =
    flake8
    isort
    oitnb
documentation =
    dunamai
    m2r2
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-programoutput

[options.entry_points]
console_scripts =
    initialize_adcirc = coupledmodeldriver.client.initialize_adcirc:main
    generate_adcirc = coupledmodeldriver.client.generate_adcirc:main
    check_completion = coupledmodeldriver.client.check_completion:main
    unqueued_runs = coupledmodeldriver.client.unqueued_runs:main
